Updated to correctly display in different browsers
Firefox gave me a problem with sizing but checksheets should now look similar in Chrome, Firefox and IE11 with a little extra spacing give or take.

--- a/Checksheets/Styles/checksheetStyle.css
+++ b/Checksheets/Styles/checksheetStyle.css
@@ -10,7 +10,7 @@
 
 div.sectionTop {
 	width: 433px;
-	height: 100px;
+	height: 110px;
 	float: left;
 	text-align: center;
 	font-family: Arial, Helvetica, sans-serif;
@@ -44,21 +44,21 @@ div.sectionTopRight {
 }
 
 div.section1 {
-    height: 715px;
+    height: 775px;
     width: 650px;
 	float: left;
     padding: 5px; 
 }
 
 div.section2 {
-    height: 470px;
+    height: 530px;
     width: 650px;
 	float: left;
     padding: 5px; 
 }
 
 div.section3 {
-    height: 600px;
+    height: 650px;
     width: 650px;
 	float: left;
     padding: 5px; 
